gerador_roteiros/tests/testfiles/0.9.0/rngvalidation/invalid/mapa_versao_sem_relaxng.mm
<map version="0.8.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346675860197" ID="ID_1257656415" MODIFIED="1346675863852" TEXT="MM">
<node CREATED="1346675865884" ID="ID_1690368907" MODIFIED="1346675878591" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346675879235" ID="ID_405282093" MODIFIED="1346675886549" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1"/>
</node>
</node>
</map>
